# woot

./: Makefile  README.md  aclocal  autoconf  automake  autoreconf  i686-woot-ar  i686-woot-gcc  i686-woot-gcc.template  i686-woot-ld.template  i686-woot-strip  module.ldscript  modulelist  shared.ldscript  user.ldscript  woot-gcc.template  woot.config  woot.files  woot.includes  woot.specs.template
binutils/: Makefile  configure
busybox/: Makefile
calc/: Makefile  main.c
clock/: Makefile  main.c
cmi8738/: Makefile  cmi8738.cpp  cmi8738.h  main.cpp
doom/: Makefile  configure
es1371/: Makefile  es1371.cpp  es1371.h  main.cpp
include/: ac97.h  ahcidrive.h  ata.h  audiodevice.h  bitmap.h  bufferedvolume.h  cdfs.h  cmos.h  cpu.h  debugstream.h  dentry.h  directoryentry.h  drive.h  elf.h  ext2.h  fbfont.h  file.h  filestream.h  filesystem.h  filesystemtype.h  framebuffer.h  gdt.h  idedrive.h  idt.h  inode.h  inputdevice.h  ints.h  irqs.h  kwm.h  limits.h  list.h  malloc.h  math.h  mbrvolume.h  memorystream.h  messagequeue.h  miscasm.h  mutex.h  new.h  objectqueue.h  (+33 more)
kernel/: Makefile  ac97.cpp  ahcidrive.cpp  audiodevice.cpp  bitmap.cpp  boot.asm  bufferedvolume.cpp  cdfs.cpp  cmos.cpp  cpu.asm  debugstream.cpp  dentry.cpp  directoryentry.cpp  drive.cpp  elf.cpp  ext2.cpp  fbfont.cpp  file.cpp  filestream.cpp  filesystem.cpp  filesystemtype.cpp  framebuffer.cpp  gdt.cpp  (+35 more)
libc/newlib-2.5.0/newlib/libc/sys/woot/: Makefile.am  configure  configure.in  crt0.c  syscalls.c  unistd.c
libc/newlib-2.5.0/newlib/libc/sys/woot/sys/: dirent.h  resource.h  stat.h  types.h
(+359 files in other folders)
